--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8081
 
-#spring.datasource.url=jdbc:postgresql://lost-chapter-2.cvtq9j4axrge.us-east-1.rds.amazonaws.com:5432/postgres?public
-spring.datasource.url=jdbc:postgresql://localhost:5432/testlostchap?public
+spring.datasource.url=jdbc:postgresql://lost-chapter-2.cvtq9j4axrge.us-east-1.rds.amazonaws.com:5432/postgres?public
+#spring.datasource.url=jdbc:postgresql://localhost:5432/testlostchap?public
 #spring.datasource.username=${db_username}
 spring.datasource.username=postgres
-#spring.datasource.password=Password123!
-spring.datasource.password=tarheel
+spring.datasource.password=Password123!
+#spring.datasource.password=tarheel
 #spring.jpa.properties.hibernate.default_schema=lostchapter
 spring.datasource.driverClassName=org.postgresql.Driver
 
